added link for the logo in footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
        <nav>
             <a href="/" title="logo">
-                <img src="../NazarDonets.github.io/img/logo.svg" alt="Веб Студия логотип">
+                <img src="./img/logo.svg" alt="Веб Студия логотип">
             </a>
             
             <ul>
