wrapped the logo in the footer into a link tag

--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
    <!-- Footer block -->
 
     <footer>
-        <img src="./img/logo_dark.svg" alt="Веб Студия логотип">
+        <a href="">
+            <img src="./img/logo_dark.svg" alt="Веб Студия логотип">
+        </a>
         <address>
             <ul>
                 <li>г. Киев, пр-т Леси Украинки, 26</li>
