added URLs for index and portfolio pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio | Портфолио</title>
 </head>
+
 <body>
+
+    <!-- Header block -->
+    <header>
+        <nav>
+            <a href="./index.html" title="logo">
+                <img src="./img/logo.svg" alt="Веб Студия логотип">
+            </a>
     
+            <ul>
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="">Все</a></li>
+            <li><a href="">Веб-сайты</a></li>
+            <li><a href="">Приложения</a></li>
+            <li><a href="">Дизайн</a></li>
+            <li><a href="">Маркетинг</a></li>
+        </ul>
+    </nav>
+
+
+
 </body>
 </html>
