Added portfolio page HTML and images

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio | Портфолио</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -27,17 +28,98 @@
         </ul>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="">Все</a></li>
-            <li><a href="">Веб-сайты</a></li>
-            <li><a href="">Приложения</a></li>
-            <li><a href="">Дизайн</a></li>
-            <li><a href="">Маркетинг</a></li>
-        </ul>
-    </nav>
+    <section>
 
+        <h2>Портфолио</h2>
+        <nav>
+            <ul>
+                <li><a href="">Все</a></li>
+                <li><a href="">Веб-сайты</a></li>
+                <li><a href="">Приложения</a></li>
+                <li><a href="">Дизайн</a></li>
+                <li><a href="">Маркетинг</a></li>
+            </ul>
+        </nav>
 
+        <div>
+            <div>
+                <a href="#">
+                    <img src="./img/portfolio/img1.jpg" alt="Технокряк" width="370" height="294">
+                    <h3>Технокряк</h3>
+                    <p>Веб-сайт</p>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <img src="./img/portfolio/img2.jpg" alt="Постер Новый Орлеан против Золотой Звезды" width="370" height="294">
+                    <h3>Постер New Orlean vs Golden Star</h3>
+                    <p>Дизайн</p>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <img src="./img/portfolio/img3.jpg" alt="Ресторан Сифуд" width="370" height="294">
+                    <h3>Ресторан Seafood</h3>
+                    <p>Приложение</p>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <img src="./img/portfolio/img4.jpg" alt="Проект Прайм" width="370" height="294">
+                    <h3>Проект Prime</h3>
+                    <p>Маркетинг</p>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <img src="./img/portfolio/img5.jpg" alt="Проект Боксез" width="370" height="294">
+                    <h3>Проект Boxes</h3>
+                    <p>Маркетинг</p>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <img src="./img/portfolio/img6.jpg" alt="Вдохновение не имеет границ" width="370" height="294">
+                    <h3>Inspiration has no Borders</h3>
+                    <p>Маркетинг</p>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <img src="./img/portfolio/img7.jpg" alt="Издание Лимитед Эдишен" width="370" height="294">
+                    <h3>Издание Limited Edition</h3>
+                    <p>Дизайн</p>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <img src="./img/portfolio/img8.jpg" alt="Проект ЛАБ" width="370" height="294">
+                    <h3>Проект LAB</h3>
+                    <p>Маркетинг</p>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <img src="./img/portfolio/img9.jpg" alt="Рост Бизнеса" width="370" height="294">
+                    <h3>Growing Business</h3>
+                    <p>Приложение</p>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <a href="">
+            <img src="./img/logo_dark.svg" alt="Веб Студия логотип">
+        </a>
+        <address>
+            <ul>
+                <li>г. Киев, пр-т Леси Украинки, 26</li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
+    </footer>
 
 </body>
 </html>
