Added styles to the index.html, started working on portfolio page styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,125 +1,138 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebStudio | Портфолио</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>WebStudio | Главная</title>
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@300;400;500;700;900&display=swap"
+            rel="stylesheet">
+    </head>
 
-<body>
+    <body>
 
-    <!-- Header block -->
-    <header>
-        <nav>
-            <a href="./index.html" title="logo">
-                <img src="./img/logo.svg" alt="Веб Студия логотип">
-            </a>
-    
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-        </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-    </header>
+        <!-- Header block -->
+        <header class="page-header">
+            <div class="container flex-wrapper">
+                <nav class="header-menu">
+                    <div class="logo">
+                        <a href="./index.html" class="logo-text"><span class="--blue">Web</span><span
+                                class="--black">Studio</span></a>
+                    </div>
+                    <ul class="site-nav">
+                        <li><a class="--dark" href="./index.html">Студия</a></li>
+                        <li><a class="--blue" href="./portfolio.html">Портфолио</a></li>
+                        <li><a class="--dark" href="">Контакты</a></li>
+                    </ul>
+                </nav>
+                <div class="header-contacts">
+                    <ul class="contacts">
+                        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    </ul>
+                </div>
+            </div>
+        </header>
 
-    <section>
+        <!-- Main content -->
+        <main>
+            <section>
+                <h2>Портфолио</h2>
+                <nav>
+                    <ul>
+                        <li><a href="">Все</a></li>
+                        <li><a href="">Веб-сайты</a></li>
+                        <li><a href="">Приложения</a></li>
+                        <li><a href="">Дизайн</a></li>
+                        <li><a href="">Маркетинг</a></li>
+                    </ul>
+                </nav>
 
-        <h2>Портфолио</h2>
-        <nav>
-            <ul>
-                <li><a href="">Все</a></li>
-                <li><a href="">Веб-сайты</a></li>
-                <li><a href="">Приложения</a></li>
-                <li><a href="">Дизайн</a></li>
-                <li><a href="">Маркетинг</a></li>
-            </ul>
-        </nav>
+                <div>
+                    <div>
+                        <a href="#">
+                            <img src="./img/portfolio/img1.jpg" alt="Технокряк" width="370" height="294">
+                            <h3>Технокряк</h3>
+                            <p>Веб-сайт</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="./img/portfolio/img2.jpg" alt="Постер Новый Орлеан против Золотой Звезды" width="370" height="294">
+                            <h3>Постер New Orlean vs Golden Star</h3>
+                            <p>Дизайн</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="./img/portfolio/img3.jpg" alt="Ресторан Сифуд" width="370" height="294">
+                            <h3>Ресторан Seafood</h3>
+                            <p>Приложение</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="./img/portfolio/img4.jpg" alt="Проект Прайм" width="370" height="294">
+                            <h3>Проект Prime</h3>
+                            <p>Маркетинг</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="./img/portfolio/img5.jpg" alt="Проект Боксез" width="370" height="294">
+                            <h3>Проект Boxes</h3>
+                            <p>Маркетинг</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="./img/portfolio/img6.jpg" alt="Вдохновение не имеет границ" width="370" height="294">
+                            <h3>Inspiration has no Borders</h3>
+                            <p>Маркетинг</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="./img/portfolio/img7.jpg" alt="Издание Лимитед Эдишен" width="370" height="294">
+                            <h3>Издание Limited Edition</h3>
+                            <p>Дизайн</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="./img/portfolio/img8.jpg" alt="Проект ЛАБ" width="370" height="294">
+                            <h3>Проект LAB</h3>
+                            <p>Маркетинг</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="./img/portfolio/img9.jpg" alt="Рост Бизнеса" width="370" height="294">
+                            <h3>Growing Business</h3>
+                            <p>Приложение</p>
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </main>
 
-        <div>
-            <div>
-                <a href="#">
-                    <img src="./img/portfolio/img1.jpg" alt="Технокряк" width="370" height="294">
-                    <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
-                </a>
+        <!-- Footer block -->
+        <footer class="--bgdark">
+            <div class="footer container">
+                <div class="logo">
+                    <a href="./index.html" class="logo-text"><span class="--blue">Web</span><span
+                            class="--white">Studio</span></a>
+                </div>
+                <ul class="footer-menu">
+                    <li>
+                        <address>г. Киев, пр-т Леси Украинки, 26</address>
+                    </li>
+                    <li><a class="--light" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="--light" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
             </div>
-            <div>
-                <a href="#">
-                    <img src="./img/portfolio/img2.jpg" alt="Постер Новый Орлеан против Золотой Звезды" width="370" height="294">
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
-                </a>
-            </div>
-            <div>
-                <a href="#">
-                    <img src="./img/portfolio/img3.jpg" alt="Ресторан Сифуд" width="370" height="294">
-                    <h3>Ресторан Seafood</h3>
-                    <p>Приложение</p>
-                </a>
-            </div>
-            <div>
-                <a href="#">
-                    <img src="./img/portfolio/img4.jpg" alt="Проект Прайм" width="370" height="294">
-                    <h3>Проект Prime</h3>
-                    <p>Маркетинг</p>
-                </a>
-            </div>
-            <div>
-                <a href="#">
-                    <img src="./img/portfolio/img5.jpg" alt="Проект Боксез" width="370" height="294">
-                    <h3>Проект Boxes</h3>
-                    <p>Маркетинг</p>
-                </a>
-            </div>
-            <div>
-                <a href="#">
-                    <img src="./img/portfolio/img6.jpg" alt="Вдохновение не имеет границ" width="370" height="294">
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Маркетинг</p>
-                </a>
-            </div>
-            <div>
-                <a href="#">
-                    <img src="./img/portfolio/img7.jpg" alt="Издание Лимитед Эдишен" width="370" height="294">
-                    <h3>Издание Limited Edition</h3>
-                    <p>Дизайн</p>
-                </a>
-            </div>
-            <div>
-                <a href="#">
-                    <img src="./img/portfolio/img8.jpg" alt="Проект ЛАБ" width="370" height="294">
-                    <h3>Проект LAB</h3>
-                    <p>Маркетинг</p>
-                </a>
-            </div>
-            <div>
-                <a href="#">
-                    <img src="./img/portfolio/img9.jpg" alt="Рост Бизнеса" width="370" height="294">
-                    <h3>Growing Business</h3>
-                    <p>Приложение</p>
-                </a>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <a href="">
-            <img src="./img/logo_dark.svg" alt="Веб Студия логотип">
-        </a>
-        <address>
-            <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
-    </footer>
-
-</body>
+        </footer>
+    </body>
 </html>
