Added portfolio page, finalized styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,77 +37,77 @@
         </header>
 
         <!-- Main content -->
-        <main>
-            <section>
-                <h2>Портфолио</h2>
+        <main class="main-portfolio">
+            <section class="container">
+                <h2 hidden>Портфолио</h2>
                 <nav>
-                    <ul>
-                        <li><a href="">Все</a></li>
-                        <li><a href="">Веб-сайты</a></li>
-                        <li><a href="">Приложения</a></li>
-                        <li><a href="">Дизайн</a></li>
-                        <li><a href="">Маркетинг</a></li>
+                    <ul class="filter-options">
+                        <li><a class="btn-filter" href="">Все</a></li>
+                        <li><a class="btn-filter" href="">Веб-сайты</a></li>
+                        <li><a class="btn-filter" href="">Приложения</a></li>
+                        <li><a class="btn-filter" href="">Дизайн</a></li>
+                        <li><a class="btn-filter" href="">Маркетинг</a></li>
                     </ul>
                 </nav>
 
-                <div>
-                    <div>
+                <div class="portfolio-items__wrapper">
+                    <div class="portfolio-item" >
                         <a href="#">
                             <img src="./img/portfolio/img1.jpg" alt="Технокряк" width="370" height="294">
                             <h3>Технокряк</h3>
                             <p>Веб-сайт</p>
                         </a>
                     </div>
-                    <div>
+                    <div class="portfolio-item" >
                         <a href="#">
                             <img src="./img/portfolio/img2.jpg" alt="Постер Новый Орлеан против Золотой Звезды" width="370" height="294">
                             <h3>Постер New Orlean vs Golden Star</h3>
                             <p>Дизайн</p>
                         </a>
                     </div>
-                    <div>
+                    <div class="portfolio-item" >
                         <a href="#">
                             <img src="./img/portfolio/img3.jpg" alt="Ресторан Сифуд" width="370" height="294">
                             <h3>Ресторан Seafood</h3>
                             <p>Приложение</p>
                         </a>
                     </div>
-                    <div>
+                    <div class="portfolio-item" >
                         <a href="#">
                             <img src="./img/portfolio/img4.jpg" alt="Проект Прайм" width="370" height="294">
                             <h3>Проект Prime</h3>
                             <p>Маркетинг</p>
                         </a>
                     </div>
-                    <div>
+                    <div class="portfolio-item" >
                         <a href="#">
                             <img src="./img/portfolio/img5.jpg" alt="Проект Боксез" width="370" height="294">
                             <h3>Проект Boxes</h3>
                             <p>Маркетинг</p>
                         </a>
                     </div>
-                    <div>
+                    <div class="portfolio-item" >
                         <a href="#">
                             <img src="./img/portfolio/img6.jpg" alt="Вдохновение не имеет границ" width="370" height="294">
                             <h3>Inspiration has no Borders</h3>
                             <p>Маркетинг</p>
                         </a>
                     </div>
-                    <div>
+                    <div class="portfolio-item" >
                         <a href="#">
                             <img src="./img/portfolio/img7.jpg" alt="Издание Лимитед Эдишен" width="370" height="294">
                             <h3>Издание Limited Edition</h3>
                             <p>Дизайн</p>
                         </a>
                     </div>
-                    <div>
+                    <div class="portfolio-item" >
                         <a href="#">
                             <img src="./img/portfolio/img8.jpg" alt="Проект ЛАБ" width="370" height="294">
                             <h3>Проект LAB</h3>
                             <p>Маркетинг</p>
                         </a>
                     </div>
-                    <div>
+                    <div class="portfolio-item" >
                         <a href="#">
                             <img src="./img/portfolio/img9.jpg" alt="Рост Бизнеса" width="370" height="294">
                             <h3>Growing Business</h3>
