--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
         <link rel="stylesheet" href="./css/style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+        <meta property="og:title" content="WebStudio" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://nazardonets.github.io/" />
+        <meta property="og:image" content="https://i.ytimg.com/vi/9SFzLZ9AARI/hqdefault.jpg" />        
+        <meta property="og:image:secure_url" content="https://i.ytimg.com/vi/9SFzLZ9AARI/hqdefault.jpg" />
+        <meta property="og:image:type" content="image/jpeg" />
+        <meta property="og:image:width" content="480" />
+        <meta property="og:image:height" content="360" />
     </head>
 
     <body>
+
+
+
 
         <!-- Header block -->
         <header class="page-header">
